# pico-experiments

./: CMakeLists.txt  EE93LC56C.cpp  EE93LC56C.hpp  FreeSans12pt7b.h  FreeSans9pt7b.h  MCP3208.cpp  MCP3208.hpp  README.md  RF24.cpp  RF24.hpp  RF24_config.h  blink.c  blink.pio  display.cpp  display.hpp  gfx.cpp  gfx.hpp  gfxcanvas.cpp  gfxcanvas.hpp  gfxfont.cpp  gfxfont.hpp  hx8340b.cpp  hx8340b.hpp  kalman.c  kalman.cpp  kalman.h  kalman.hpp  nRF24L01.h  packets.h  reciever.cpp  spi9.pio  statemachine.cpp  statemachine.hpp  tft-example.cpp
